--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --files src/index.ts",
-    "lint:fix":"eslint --fix --ext .ts ."
+    "lint:fix":"eslint --fix --ext .ts .",
+    "start":"tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
